<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/track_cell"
          android:icon="@drawable/track_cell"
          android:title="@string/track_cell"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/track_location"
          android:icon="@drawable/ic_action_location_off"
          android:title="@string/track_location"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/track_signal"
          android:icon="@drawable/ic_action_network_cell"
          android:title="@string/track_signal"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/track_femtocell"
        android:icon="@drawable/ic_action_network_cell"
        android:title="@string/track_femtocell"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/show_map"
          android:icon="@drawable/ic_action_map"
          android:title="@string/show_map"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/export_database"
          android:icon="@drawable/ic_action_import_export"
          android:title="@string/export_database"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/preferences"
          android:icon="@drawable/ic_action_settings"
          android:title="@string/preferences"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/update_opencelldata"
          android:title="@string/update_opencelldata"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/app_exit"
          android:icon="@drawable/ic_action_remove"
          android:title="@string/quit"
          android:showAsAction="ifRoom" />
</menu>
