<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <com.google.android.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:enabled="true"
        android:clickable="true"
        android:apiKey="0mg6hR1rVSDUaS4bYUXL4RKyMZCkEv92b9tzNoQ"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/tgprs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gprs"
        android:typeface="monospace"
        android:textStyle="bold"
        android:textColor="#A9A9A9"
        android:background="#95FFFFFF"
        android:width="70dp"
        />

    <TextView
        android:id="@+id/tedge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edge"
        android:typeface="monospace"
        android:textStyle="bold"
        android:textColor="#87CEFA"
        android:layout_below="@+id/tgprs"
        android:background="#95FFFFFF"
        android:width="70dp"
        />

    <TextView
        android:id="@+id/tumts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/umts"
        android:typeface="monospace"
        android:textStyle="bold"
        android:textColor="#7CFC00"
        android:layout_below="@+id/tedge"
        android:background="#95FFFFFF"
        android:width="70dp"
        />

    <TextView
        android:id="@+id/thsdpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hsdpa"
        android:typeface="monospace"
        android:textStyle="bold"
        android:textColor="#FF6347"
        android:layout_below="@+id/tumts"
        android:background="#95FFFFFF"
        android:width="70dp"
        />

    <TextView
        android:id="@+id/thsupa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hsupa"
        android:typeface="monospace"
        android:textStyle="bold"
        android:textColor="#FF00FF"
        android:layout_below="@+id/thsdpa"
        android:background="#95FFFFFF"
        android:width="70dp"
        />

    <TextView
        android:id="@+id/thspa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hspa"
        android:typeface="monospace"
        android:textStyle="bold"
        android:textColor="#238E6B"
        android:layout_below="@+id/thsupa"
        android:background="#95FFFFFF"
        android:width="70dp"
        />

    <TextView
        android:id="@+id/tcdma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cdma"
        android:typeface="monospace"
        android:textStyle="bold"
        android:textColor="#8A2BE2"
        android:layout_below="@+id/thspa"
        android:background="#95FFFFFF"
        android:width="70dp"
        />

    <TextView
        android:id="@+id/tevo0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evo0"
        android:typeface="monospace"
        android:textStyle="bold"
        android:textColor="#FF69B4"
        android:layout_below="@+id/tcdma"
        android:background="#95FFFFFF"
        android:width="70dp"
        />

    <TextView
        android:id="@+id/tevoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evoA"
        android:typeface="monospace"
        android:textStyle="bold"
        android:textColor="#FF3300"
        android:layout_below="@+id/tevo0"
        android:background="#95FFFFFF"
        android:width="70dp"
        />
</RelativeLayout>
